cabal-version:      >= 1.8
build-type:         Simple
name:               simple-core
version:            0.0
license:            BSD3
license-file:       LICENSE
category:           Compilers
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2015-2018
synopsis:           Simple prover
description:
    A simple core language.
homepage:           https://github.com/ndmitchell/simple-core#readme
bug-reports:        https://github.com/ndmitchell/simple-core/issues
data-files:
    imports/*.hs
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==7.10.1, GHC==7.8.4

source-repository head
    type:     git
    location: https://github.com/ndmitchell/simple-core.git

library
    build-depends:
        base == 4.*,
        deepseq,
        transformers,
        uniplate, extra,
        haskell-src-exts
    hs-source-dirs:     src
    exposed-modules:
        Language.Core
    other-modules:
        Language.Core.HSE
        Language.Core.Simplify
        Language.Core.Operations
        Language.Core.Type
        Language.Core.Variables
