cabal-version:      >= 1.18
build-type:         Simple
name:               simple-core
version:            0.0
license:            BSD3
license-file:       LICENSE
category:           Compilers
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2015-2018
synopsis:           Simple prover
description:
    A simple core language.
homepage:           https://github.com/ndmitchell/simple-core#readme
bug-reports:        https://github.com/ndmitchell/simple-core/issues
data-files:
    imports/*.hs
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==8.4.1, GHC==8.2.2, GHC==8.0.2
data-files:
    imports/*.hs

source-repository head
    type:     git
    location: https://github.com/ndmitchell/simple-core.git

library
    default-language: Haskell2010
    build-depends:
        base == 4.*,
        deepseq,
        transformers,
        directory,
        containers,
        uniplate,
        extra,
        haskell-src-exts ==1.20.*
    hs-source-dirs:     src
    exposed-modules:
        Language.Core
    other-modules:
        Language.Core.Debug
        Language.Core.Equivalent
        Language.Core.HSE
        Language.Core.Operations
        Language.Core.Reduce
        Language.Core.Simplify
        Language.Core.Type
        Language.Core.Variables
        Paths_simple_core

executable qed
    default-language:   Haskell2010
    build-depends:
        base,
        simple-core,
        uniplate,
        extra
    main-is:            demo/QED.hs
